--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.3.10"
+    "webpack-dev-server": "^3.3.10",
+    "jquery": "^3.4.1"
+  },
+  "dependencies": {
   }
 }
