--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
+    "jquery.easing": "^1.4.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.3.10",
-    "jquery": "^3.4.1"
+    "webpack-dev-server": "^3.3.10"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
