--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,25 @@
-language:      node_js
-git:
-  depth:       3
+# .travis.yml  
+language: node_js
+
 node_js:
-  - "node"
-install:       npm install
-script:
-  - npm test
-  - gulp
+  - "lts/*"
+
 cache:
   directories:
-    - node_modules
-notifications:
-  email:       false
+    - "node_modules"
+
+branches:
+  only:
+  - master
+
+install:
+- npm install
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_ACCESS_TOKEN  # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
+  target-branch: gh-pages
+  local-dir: dist
+  on:
+    branch: master
