--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "datatables.net": "^1.10.20",
     "jquery.easing": "^1.4.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
