Refactor data files and crawler
Files have been moved to data/ folder and is renamed in English. Also, the crawler logic is separated into world and Korea files and now directly pushes to GitHub after committing, rather than creating a PR.

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,7 +1,7 @@
 name: Run crawler
 on:
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '*/20 * * * *'
 jobs:
   runCrawler:
     runs-on: ubuntu-latest
@@ -18,30 +18,17 @@ jobs:
           pip install -r requirements.txt
       - name: Run crawler
         run: |
-          python "크롤러_통합.py"
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v2
+          python "data/crawlWorldData.py"
+          python "data/crawlKoreaRegionalData.py"
+      - name: Commit files
+        run: |
+          git config --local user.email "commit-bot@taeuk.me"
+          git config --local user.name "LiveCoronaBot"
+          git add data/worldData.js data/koreaRegionalData.js
+          git commit -m "Run crawler and update data"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          committer: LiveCoronaBot <commit-bot@taeuk.me>
-          commit-message: Run crawler and update data
-          title: Run crawler and update data
-          body: |
-            # LiveCorona Data Crawler
-
-            Executed `크롤러_통합.py`
-
-            ---
-
-            Make sure that you look over the diff as the crawler might have broken overnight. 
-            If everything is OK, approve and merge the PR to apply.
-
-            크롤러의 diff 결과를 꼭 확인해 주십시오! 밤새 고장이 났을 수도 있습니다.
-            괜찮아 보인다면 "Approve"와 "Merge" 하셔서 적용해 주십시오.
-
-            ---
-            cc: @LiveCoronaDetector/data-update
-
-            🤖 on behalf of @taeukme
-          branch: data-crawl-updates
-          labels: data update
+          branch: 'master'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      
