--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -20,11 +20,12 @@ jobs:
         run: |
           python "data/crawlWorldData.py"
           python "data/crawlKoreaRegionalData.py"
+          python "data/crawlKoreaRegionalCumulativeData.py"
       - name: Commit files
         run: |
           git config --local user.email "commit-bot@taeuk.me"
           git config --local user.name "LiveCoronaBot"
-          git add data/worldData.js data/koreaRegionalData.js
+          git add data/worldData.js data/koreaRegionalData.js data/koreaRegionalCumulativeData.js
           git commit -m "Run crawler and update data"
       - name: Push changes
         uses: ad-m/github-push-action@master
