--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -21,11 +21,12 @@ jobs:
           python "data/crawlWorldData.py"
           python "data/crawlKoreaRegionalData.py"
           python "data/crawlKoreaRegionalCumulativeData.py"
+          python "data/crawlWorldCumulativeData.py"
       - name: Commit files
         run: |
           git config --local user.email "commit-bot@taeuk.me"
           git config --local user.name "LiveCoronaBot"
-          git add data/worldData.js data/koreaRegionalData.js data/koreaRegionalCumulativeData.js
+          git add data/worldData.js data/koreaRegionalData.js data/koreaRegionalCumulativeData.js data/worldCumulativeData.js
           git commit -m "Run crawler and update data"
       - name: Push changes
         uses: ad-m/github-push-action@master
