--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -20,17 +20,15 @@ jobs:
         run: |
           python "data/crawlWorldData.py"
           python "data/crawlKoreaRegionalData.py"
-          python "data/Hopkins_world_data_parser.py"
           python "data/crawlWorldCumulativeData.py"
       - name: Commit files
         run: |
           git config --local user.email "commit-bot@taeuk.me"
           git config --local user.name "LiveCoronaBot"
-          git add data/worldData.js data/koreaRegionalData.js data/HopkinsCoronaWorldData.js data/worldCumulativeData.js
+          git add data/worldData.js data/koreaRegionalData.js data/worldCumulativeData.js
           git commit -m "Run crawler and update data"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           branch: 'master'
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      
