Separate current and cumulative crawlers
Previously, a single GitHub actions ran all crawlers, current and cumulative. Because the number of crawlers are increasing, I've separated it into two different actions: one's current and the other's cumulative. Cumulative tends to break more easily from my experience, so this will allow Actions to at least push current data. Also, a new crawler `crawlKoreaTotalCumulativeData.py` has been added from the CoronaCrawler repository.

--- a/.github/workflows/cumulativeCrawler.yml
+++ b/.github/workflows/cumulativeCrawler.yml
@@ -18,14 +18,15 @@ jobs:
           pip install -r requirements.txt
       - name: Run crawler
         run: |
-          python "data/crawlWorldData.py"
-          python "data/crawlKoreaRegionalData.py"
+          python "data/crawlKoreaTotalCumulativeData.py"
+          python "data/crawlKoreaRegionalCumulativeData.py"
+          python "data/crawlWorldCumulativeData.py"
       - name: Commit files
         run: |
           git config --local user.email "commit-bot@taeuk.me"
           git config --local user.name "LiveCoronaBot"
-          git add data/worldData.js data/koreaRegionalData.js
-          git commit -m "Run crawler and update current data"
+          git add data/koreaTotalCumulativeData.js data/koreaRegionalCumulativeData.js data/worldCumulativeData.js
+          git commit -m "Run crawler and update cumulative data"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
