--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python "data/crawlWorldData.py"
           python "data/crawlKoreaRegionalData.py"
+          python "data/crawlKoreaAgeDeathsPerData.py"
       - name: Commit files
         run: |
           git config --local user.email "commit-bot@taeuk.me"
